[project]
name = "traverse"                # local project name; fine even if taken on PyPI
version = "0.0.1"
description = "Ingest, process, and graph music data → NetworkX / WebGL."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
dependencies = [
  "pandas>=2.0",
  "pydantic>=2.5",
  "pydantic-settings>=2.2",
  "networkx>=3.0",
  "pyarrow>=14.0",
  "typer>=0.12",
  "tqdm>=4.66",
]

[project.optional-dependencies]
spotify = ["spotipy>=2.23"]
cosmograph = ["pycosmograph>=0.3"]
viz = ["matplotlib>=3.8"]
dev = ["pytest","pytest-cov","ruff","mypy","pre-commit","ipykernel", "pandas-stubs", "types-tqdm", "networkx>=3.1", "types-networkx",]

[project.scripts]
tm = "traverse.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
